--- a/MagicBulletFix.csproj
+++ b/MagicBulletFix.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Reference Include="CounterStrikeSharp.API">
-      <HintPath>C:\Users\Jon\Desktop\serverplugins\CounterStrikeSharp.API.dll</HintPath>
+      <HintPath>CounterStrikeSharp.API.dll</HintPath>
     </Reference>
   </ItemGroup>
 
